<resources>
    <string name="app_name">Innovative Solutions</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_send_you_an_one_time_password_on_this_mobile_number">We will send you an One Time Password on this mobile number</string>
    <string name="_84">+91 - </string>
    <string name="_123456789">123456789</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP?</string>
    <string name="verify">Verify</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_Deals">Deals</string>
    <string name="title_order">Orders</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="purpose">
        <item>School</item>
        <item>College</item>
        <item>Personal</item>
        <item>Office</item>
        <item>Enterprise</item>
        <item>Other</item>
    </string-array>
</resources>
