<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:overScrollMode="never"
    android:background="@color/white"
    android:scrollbars="none"
    tools:context=".Activities.Authentication.VerifyOTPActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/receive"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/otp_verification"
            android:textStyle="bold"
            android:fontFamily="@font/nunito"
            android:textSize="20sp"
            android:textColor="@color/text_primary"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/enter_the_otp_sent_to"
            android:textSize="14sp"
            android:fontFamily="@font/nunito"
            android:textColor="@color/gray"/>

        <TextView
            android:id="@+id/tv_MobileNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:textColor="@color/text_primary"
            android:textSize="14sp"
            android:textStyle="bold" />

        <in.aabhasjindal.otptextview.OtpTextView
            android:id="@+id/otp_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#000000"
            app:bar_active_color="@color/primary"
            app:bar_enabled="true"
            app:bar_error_color="@color/red"
            app:bar_height="3dp"
            app:bar_inactive_color="@color/gray"
            app:bar_margin_bottom="0dp"
            app:bar_margin_left="2dp"
            app:bar_margin_right="2dp"
            app:bar_success_color="#74FF00"
            app:box_margin="0dp"
            app:height="40dp"
            app:length="6"
            app:otp_text_size="20dp"
            app:width="40dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/didn_t_receive_the_otp"
                android:textColor="@color/gray"
                android:fontFamily="@font/nunito"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tv_ResendOTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/resend_otp"
                android:textColor="@color/accent"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/nunito"
                android:textSize="15sp"/>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_Verify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:backgroundTint="@color/primary"
                android:text="@string/verify"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:fontFamily="@font/nunito"
                android:padding="10dp"
                android:textSize="18sp"/>

        </FrameLayout>


    </LinearLayout>

</ScrollView>